<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.azweartech.azweartech.LoginActivity">

    <TextView
        android:text = "@string/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_edit_text"
        android:layout_below="@id/login_text_view"
        android:focusable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/create_account_text_view"
        android:layout_below="@id/login_edit_text"
        android:textColor="@color/link_color"/>

    <TextView
        android:text="@string/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_text_view"
        android:layout_below="@+id/create_account_text_view"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_edit_text"
        android:layout_below="@id/password_text_view"
        android:focusable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password_text_view"
        android:layout_below="@+id/password_edit_text"
        android:textColor="@color/link_color"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/login_button"
        android:layout_below="@+id/forgot_password_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="attemptLogin"/>

</RelativeLayout>
