<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"

    tools:context="com.azweartech.azweartech.PEMFActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/frequency" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/freqLowNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_marginLeft="16dp" />

            <SeekBar
                android:id="@+id/freqSeekBar"
                android:layout_width="150dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/freqHighNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="100"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        style="@style/HelpText"
        android:text="@string/tens_help"/>

    <Button
        android:id="@+id/TENSHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tens_about" />


</LinearLayout>